# souls-like-death-counter

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: config.rs  deaths.rs  main.rs  watcher.rs
src/games/: ds1.rs  ds2.rs  ds3.rs  dsr.rs  mod.rs  sekiro.rs
