[package]
name = "souls-like-death-counter"
version = "0.7.0"
authors = ["Anthony Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.3"
block-modes = "0.8.1" # aes dependency
crossbeam-channel = "0.4.0" # notify dependency
dirs = "3.0"
notify = "4.0.16"
serde = { version = "1.0", features = ["derive"] } # toml dependency
toml = "0.5"